--- a/style-ficha.css
+++ b/style-ficha.css
@@ -105,8 +105,8 @@ img:active {
 
 .geral {
     display: grid;
-    grid-template-columns:15vw 15vw 5vw 30vw 5vw 30vw;
-    grid-template-rows: 20vh 40vh 40vh;
+    grid-template-columns:15vw 15vw 5vw 30vw 5vw 15vw 15vw;
+    grid-template-rows: 5vh 10vh 5vh 40vh 40vh;
     align-items: flex-end;
 }
 
@@ -115,14 +115,14 @@ img:active {
 .personagem {
     background-color: rgba(51, 51, 51, 0.5);
     /* width: calc(30vw - 43.5px); */
-    height: calc(80vh - 13.5px);
+    height: calc(80vh - 18.5px);
     border: solid 10px #29251f;
     border-style: groove;
     /* padding: 12.5px; */
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 6;
     justify-content: flex-end;
     display: grid;
     /* grid-template-columns: 1fr 1fr; */
@@ -165,6 +165,14 @@ img:active {
     display: flex;
 }
 
+.escolhas p,
+.escolhas a {
+    color: #fcffe5;
+    font-size: 13.5px;
+    font-family: 'gothic';
+    display: flex;
+}
+
 .personagem div:hover {
     cursor: pointer;
 }
@@ -181,8 +189,8 @@ img:active {
     background-position: center;
     grid-column-start: 4;
     grid-column-end: 5;
-    grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 6;
     background-size: cover;
     border: solid 10px #29251f;
     border-style: groove;
@@ -204,7 +212,40 @@ img:active {
     grid-column-end: 3;
 }
 
-.personalização {
+.escolhas {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 7;
+    background-color: rgba(51, 51, 51, 0.5);
+    /* width: calc(30vw - 43.5px); */
+    height: calc(10vh - 18.5px);
+    border: solid 10px #29251f;
+    border-style: groove;
+    justify-content: flex-end;
+    display: grid;
+    grid-template-columns: 17.5vw 17.5vw 17.5vw 17.5vw;
+    justify-items: center;
+    align-items: center;
+    box-shadow:
+        inset 10px 10px 20px rgba(0, 0, 0, 0.2),
+        /* Sombra interna nos lados esquerdo e superior */
+        inset -10px -10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.escolhas > div{
+    width: 133.5px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background-image: url(imgs/burrado.png);
+    background-position: center;
+    background-size: 133.5px 45px;
+    margin: 0 7.5px 0 7.5px;
+}
+/* .personalização {
     grid-row-start: 1;
     grid-row-end: 3;
     grid-column-start: 2;
@@ -218,9 +259,7 @@ img:active {
     background-color: #333333;
     justify-content: space-around;
     align-items: center;
-    /* Alinha verticalmente o conteúdo no centro */
     justify-items: center;
-    /* Alinha horizontalmente o conteúdo no centro */
 }
 
 .personalização>div {
@@ -230,8 +269,8 @@ img:active {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
+} */
+/* 
 #raca div {
     background-color: #aa0404;
 }
@@ -266,4 +305,4 @@ img:active {
     background-color: #333333;
     width: 500px;
 }
-
+ */
