--- a/style-ficha.css
+++ b/style-ficha.css
@@ -168,7 +168,7 @@ img:active {
 .escolhas p,
 .escolhas a {
     color: #fcffe5;
-    font-size: 13.5px;
+    font-size: 13   .5px;
     font-family: 'gothic';
     display: flex;
 }
