--- a/style-ficha.css
+++ b/style-ficha.css
@@ -167,7 +167,7 @@ a {
     background-repeat: no-repeat;
     box-shadow:
         inset 20px 20px 20px rgba(0, 0, 0, 0.2),
-        inset -20px -20px 20px rgba(0, 0, 0, 0.2);
+        inset -20px -20px 20px rgba(0, 0, 0, 0.2)
 }
 
 .geral .personalização {
@@ -177,7 +177,6 @@ a {
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
-    transition: 0.5s;
 }
 
 .escolhas {
@@ -237,14 +236,14 @@ a {
     flex-direction: row;
 }
 
-.classe,
-.raca,
-.aparencia,
-.equipamento
+.classesPersonalizacao{
+    display: grid;
+}
 
 .personagem{
     display: none;
 }
+
 .classesPersonalizacao{
     display: grid;
 }
@@ -260,7 +259,6 @@ a {
     box-shadow:
         inset 10px 10px 20px rgba(0, 0, 0, 0.2),
         inset -10px -10px 20px rgba(0, 0, 0, 0.2);
-    transition: 0.5s;
 }
 
 .itemGaleria{
