--- a/style-ficha.css
+++ b/style-ficha.css
@@ -27,10 +27,11 @@ body{
 }
 
 h2 {
-    text-align: left;
+    text-align: center;
     font-size: 30px;
     color: #aa0404;
     font-family: 'Baskervville SC';
+    
 }
 
 p {
@@ -58,7 +59,7 @@ a {
 /*GERAL*/
 
 
-#body-ficha2 {
+#body-ficha3 {
     background-image: url(imgs/cena-de-fantasia-em-3d.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -93,6 +94,12 @@ a {
     box-shadow:
         inset 10px 10px 20px rgba(0, 0, 0, 0.2),
         inset -10px -10px 20px rgba(0, 0, 0, 0.2);
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+    opacity: 0;
+}
+
+.personagem.visible {
+    opacity: 1;
 }
 
 .personagem div {
@@ -124,22 +131,6 @@ a {
     font-size: 15px;
     font-family: 'gothic';
     display: flex;
-}
-
-.selecionado p {
-    color: #fcffe5;
-    font-size: 13.5px;
-    font-family: 'gothic';
-    display: flex;
-    transition: 0.5s;
-}
-
-.naoSelecionado p{
-    color: #fcffe5;
-    font-size: 12px;
-    font-family: 'gothic';
-    display: flex;
-    transition: 0.5s;
 }
 
 .personagem div:hover {
@@ -197,34 +188,51 @@ a {
         inset -10px -10px 20px rgba(0, 0, 0, 0.2);
 }
 .selecionado{
-    width: 135px;
-    height: 45px;
+    width: 140px;
+    height: 46.67px;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
     background-image: url(imgs/burrado.png);
     background-position: center;
-    background-size: 135px 45px;
+    background-size: 140px 46.67px;
     flex-wrap: wrap;
     flex-direction: row;
     transition: 0.5s;
 }
 .naoSelecionado{
     opacity: 0.5;
-    width: 120px;
-    height: 40px;
+    width: 105px;
+    height: 35px;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
     background-image: url(imgs/burrado.png);
     background-position: center;
-    background-size: 120px 40px;
+    background-size: 105px 35px;
     flex-wrap: wrap;
     flex-direction: row;
     transition: 0.5s;
 }
+
+.selecionado p {
+    color: #fcffe5;
+    font-size: 13.5px;
+    font-family: 'gothic';
+    display: flex;
+    transition: 0.5s;
+}
+
+.naoSelecionado p{
+    color: #fcffe5;
+    font-size: 10.15px;
+    font-family: 'gothic';
+    display: flex;
+    transition: 0.5s;
+}
+
 
 .setas{
     display: flex;
@@ -268,6 +276,11 @@ a {
     max-height: calc(80vh - 18.5px);
     overflow: auto;
 }
+
+.itemGaleria img{
+    filter: drop-shadow(0px 0px 20px rgb(161, 210, 173));
+}
+
 .galeriaDeSelecao p{
     text-align: center;
     font-size: 15px;
@@ -286,3 +299,29 @@ a {
     display: none;
 }
 
+.botaoSelecao{
+    width: 180px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background-image: url(imgs/burrado.png);
+    background-position: center;
+    background-size: 180px 60px;
+    margin: 30px auto 30px auto;
+}
+
+.botaoSelecao p{
+    color: #fcffe5;
+    font-size: 15px;
+    font-family: 'gothic';
+    display: flex;
+}
+
+.botaoSelecao:hover{
+    cursor: pointer;
+}
+.botaoSelecao:active{
+    opacity: 0.5;
+}
