--- a/style-ficha.css
+++ b/style-ficha.css
@@ -50,6 +50,13 @@ a {
 
 }
 
+label {
+    color: #fcffe5;
+    font-size: 15px;
+    font-family: 'gothic';
+    font-weight: bold;
+    padding-top: 15px;
+}
 
 /*GERAL*/
 /*GERAL*/
@@ -162,6 +169,15 @@ a {
     max-width: 35vw;
     max-height: 35vw;
     position: absolute;
+}
+
+#olhos {
+    width: 45px;
+    background-color: #aa0404;
+    position: absolute;
+    height: 45px;
+    top: 30%;
+    right: 49%;
 }
 
 .geral .personalização {
@@ -329,3 +345,19 @@ a {
     opacity: 0.5;
 }
 
+#item-olhos{
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
+}
+
+#inputOlhos {
+    margin: 0 auto;
+    justify-content: center;
+    display: flex;
+    width: 80px;
+    height: 50px;
+    margin-top: 15px;
+}
