--- a/style-ficha.css
+++ b/style-ficha.css
@@ -77,9 +77,8 @@ label {
 
 .geral {
     display: grid;
-    grid-template-columns: 7.5vw 20vw 2.5vw 40vw 2.5vw 20vw 7.5vw;
-    grid-template-rows: 5vh 10vh 5vh 40vh 40vh;
-    align-items: flex-end;
+    grid-template-columns: 2.5vw 20vw 7.5vw 40vw 7.5vw 20vw 2.5vw;
+    grid-template-rows: 5vh 10vh 5vh 80vh;
 }   
 
 
@@ -92,7 +91,7 @@ label {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 4;
-    grid-row-end: 6;
+    grid-row-end: 5;
     justify-content: center;
     display: grid;
     grid-template-rows: auto auto auto auto auto;
@@ -154,7 +153,7 @@ label {
     grid-column-start: 4;
     grid-column-end: 5;
     grid-row-start: 4;
-    grid-row-end: 6;
+    grid-row-end: 5;
     border: solid 10px #29251f;
     border-style: groove;
     align-items: center;
@@ -162,12 +161,14 @@ label {
     display: flex;
     box-shadow:
         inset 20px 20px 20px rgba(0, 0, 0, 0.2),
-        inset -20px -20px 20px rgba(0, 0, 0, 0.2)
+        inset -20px -20px 20px rgba(0, 0, 0, 0.2);
+    position: relative;
 }
 
 #imagem-personagem img{
-    max-width: 35vw;
-    max-height: 35vw;
+    width: 35vw;
+    height: 35vw;
+    display: block;
     position: absolute;
 }
 
@@ -176,8 +177,8 @@ label {
     background-color: #aa0404;
     position: absolute;
     height: 45px;
-    top: 30%;
-    right: 49%;
+    bottom: 80%;
+    left: 45%;
 }
 
 .geral .personalização {
@@ -276,7 +277,7 @@ label {
 }
 .galeriaDeSelecao{
     grid-row-start: 4;
-    grid-row-end: 6;
+    grid-row-end: 5;
     grid-column-start: 6;
     grid-column-end: 7;
     background-color: rgba(51, 51, 51, 0.5);
@@ -318,7 +319,7 @@ label {
     display: none;
 }
 
-.botaoSelecao{
+.botaoSelecao, .botaoSelecaoClasse{
     width: 180px;
     height: 60px;
     display: flex;
@@ -358,6 +359,30 @@ label {
     justify-content: center;
     display: flex;
     width: 80px;
-    height: 50px;
+    height: 40px;
     margin-top: 15px;
 }
+
+#flecha-personagem-esquerda {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+    width: 80px;
+}
+#flecha-personagem-direita {
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+    width: 80px;
+}
+
