--- a/style.css
+++ b/style.css
@@ -1146,6 +1146,29 @@ iframe {
     .moldura .video{
         margin: 0 auto;
     }
+
+    
+#monte-personagem {
+    display: flex;
+    padding: 40000000000px;
+    flex-direction: column;
+    align-items: center;
+}
+
+#botaoPrsonagem{
+    width: 198px;
+    height: 73px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background-image: url(imgs/burrado.png);
+    background-position: center;
+    background-size: 198px 73px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0 10px 0 10px;
+}
     
 }
 
@@ -1431,6 +1454,8 @@ input[type="text"] {
     background-color: #333333;
     width: 500px;
 }
+
+
 
 
 /*PERSONAGEM*/
