--- a/style.css
+++ b/style.css
@@ -316,8 +316,8 @@ header .menudesktop nav ul li a:hover {
 /*DADOS*/
 /*DADOS*/
 /*DADOS*/
-.body-dados {
-    background-image: url(imgs/Anime\ Original.png);
+#body-dados {
+    background-image: url(imgs/Anime.png);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
